# mixer_with_new_gui

./: platformio.ini
lib/: lv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen10.c  ui_Screen11.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c  ui_img_1502005807.c  ui_img_169476923.c  ui_img_169479996.c  ui_img_back_png.c  ui_img_clock_png.c  ui_img_enter_line_png.c  ui_img_galochka_png.c  ui_img_group_8_png.c  ui_img_left_line1_png.c  ui_img_left_line2_png.c  ui_img_nowifi_png.c  ui_img_rectangle_582_png.c  ui_img_right_line1_png.c  ui_img_right_line2_png.c  ui_img_settinggroup_png.c  ui_img_speed_png.c  ui_img_vector2_png.c  ui_img_vector_png.c  ui_img_wifi_png.c
src/: main.cpp  main.h  partitions.csv
